Fix ViewEmployee tabs/routing, anable to edit break in report, fix bg color ()on header

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,3 +6,9 @@
 .margintopadd{
     margin-top: 10%!important;
 }
+
+  .dropdown-item.active,
+  .dropdown-item:active {
+    background-color: transparent !important;
+    color: inherit !important;
+  }
